# RTcmix

./: .gitignore  .gitmodules  .mailmap  AUTHORS  CLAUDE.md  ChangeLog  INSTALL  Makefile  NEWS  README  README.embed  README_CLAUDE  THANKS  aclocal.m4  config.h.in  config.sub  configure  configure.ac  defs.conf.in  make.lo  makefile.conf.in  project_arch.md  project_plan.md  project_testing.md  site.conf  site.conf.ios-dev  site.conf.ios-sim  site.conf.maxmsp  site.conf.osxapp
.claude/: session_state.md
.github/workflows/: ci.yml
SGRAN2/: STGRAN2.cpp  sgran2.sco
apps/: Makefile
apps/embedtest/: Makefile  README.txt  embedtest.c  functiondef.sco  patest.c  scoreplayer.c  scoretrigger.c
apps/wasmtest/: Makefile  README  glue.c  glue.js  glue.wasm  index.html  worklet.js
docs/: BUGS  INSTALL.Linux  INSTALL.SGI  Makefile  README.bus_config  README.documentation  README.inst_porting_v4  README.table_assigns  README1.0  README1.0.Linux  README2.0  README2.0.Linux  README2.1.Linux  inst_update_strategy
docs/historical/: README  README.inst_porting  README1.0  README2.0
docs/pod/: .cvsignore  AM.pod  ELL.pod  Makefile  PAN.pod  REVERBIT.pod  REVMIX.pod  SHAPE.pod  STEREO.pod  TRANS.pod  TRANS3.pod  WAVETABLE.pod  __README__  addgens.pod  bus_config.pod  copygen.pod  fdump.pod  fix_html.sh  fplot.pod  gen1.pod  gen10.pod  gen17.pod  gen18.pod  gen2.pod  gen20.pod  gen24.pod  gen25.pod  gen3.pod  gen4.pod  gen5.pod  gen6.pod  gen7.pod  gen9.pod  get_spray.pod  infile.pod  invertgen.pod  irand.pod  make_html_index.pl  makegen.pod  mkinstalldirs  (+32 more)
docs/rtcmixrc/: README  rtcmixrc_digi192  rtcmixrc_motu828mk2
docs/sample_code/: README
docs/sample_scores/: AM1.sco  AM2_rtin.sco  AM3_rtin.sco  AMINST1.sco  BUTTER1.sco  CLAR1.sco  CLAR2.sco  COMBIT1.sco  COMBIT2.sco  COMBIT3.sco  COMBIT4_rtin.sco  COMBIT5_rtin.sco  COMBIT6.sco  COMPLIMIT1.sco  COMPLIMIT2.sco  CONVOLVE1_1.sco  CONVOLVE1_2.sco  DECIMATE1.sco  DEL1_1.sco  DEL1_2_rtin.sco  DELAY1.sco  DELAY2.sco  DELAY3_rtin.sco  DELAY4.sco  ELL1.sco  ELL2.sco  EQ_1.sco  FILTERBANK1.sco  FILTERBANK2.sco  FILTSWEEP1.sco  FILTSWEEP_JDELAY.sco  FIR1.sco  FLANGE1.sco  FLANGE2.sco  FLANGE3.sco  FMINST1.sco  FMINST2.sco  FMINST3.sco  FMINST4.sco  FMINST5.sco  (+132 more)
genlib/: FFTReal.cpp  FFTReal.h  Makefile  Oallpass.cpp  Oallpass.h  Oallpassi.cpp  Oallpassi.h  Obalance.cpp  Obalance.h  Obucket.cpp  Obucket.h  Ocomb.cpp  Ocomb.h  Ocombi.cpp  Ocombi.h  Odcblock.cpp  Odcblock.h  Odelay.cpp  Odelay.h  Odelayi.cpp  Odelayi.h  Odistort.cpp  Odistort.h  Oequalizer.cpp  Oequalizer.h  Offt.cpp  Offt.h  Oonepole.cpp  Oonepole.h  Ooscil.cpp  Ooscil.h  Ooscili.cpp  Ooscili.h  Orand.cpp  Orand.h  Oreson.cpp  Oreson.h  Orms.cpp  Orms.h  Ortgetin.cpp  (+56 more)
imbed/: Makefile  README.imbed.txt
imbed/arpeggiate/: Makefile  arpeggiate.cpp
imbed/crudelooch/: Makefile  crudelooch.cpp  loochinspace.cpp  randfuncs.c
imbed/flutescale/: Makefile  flutescale.cpp
imbed/happykeys/: Makefile  happykeys.cpp
imbed/mixit/: Makefile  mixit.cpp
imbed/wanderfreq/: Makefile  wanderfreq.cpp
imbed/wonderfreq/: Makefile  wonderfreq.cpp
include/: Makefile  Ougens.h  RTMIDIOutput.h  RTcmix_API.h  RTsockfuncs.h  bus.h  delmacros.h  iostream.h  macros.h  rt_types.h  rtupdate.h  ugens.h
insts/: Makefile
insts/base/: Makefile
insts/bgg/: Makefile  README  package.conf
insts/doug/: Makefile
insts/jg/: Makefile  README  __README__
insts/joel/: Makefile
insts/maxmsp/: Makefile
insts/neil/: Makefile
insts/osc/: Makefile
insts/std/: Makefile  README
insts/stk/: Makefile
insts/vccm/: Makefile  TODO
pkg/osx/: Makefile  README  README-Applications.rtf  README-UsersShared.rtf  README-UsrLocal.rtf  RTcmix-Intel.pmproj  RTcmix-PPC.pmproj  distribution.dist  intro.rtf  license.txt  postflight-usersshared  prep-package  uninstall-rtcmix-intel  uninstall-rtcmix-ppc
snd/: Makefile  conga.snd  loocher.aiff
src/: Makefile
src/audio/: ALSAAudioDevice.cpp  ALSAAudioDevice.h  AppleAudioDevice.cpp  AppleAudioDevice.h  AudioDevice.cpp  AudioDevice.h  AudioDeviceImpl.cpp  AudioDeviceImpl.h  AudioFileDevice.cpp  AudioFileDevice.h  AudioIODevice.cpp  AudioIODevice.h  AudioOutputGroupDevice.cpp  AudioOutputGroupDevice.h  EmbeddedAudioDevice.cpp  EmbeddedAudioDevice.h  ExampleAudioDevice.cpp  ExampleAudioDevice.h  JackAudioDevice.cpp  JackAudioDevice.h  MSPAudioDevice.cpp  MSPAudioDevice.h  Makefile  MultiPortOSSAudioDevice.cpp  NetAudioDevice.cpp  NetAudioDevice.h  OSSAudioDevice.cpp  OSSAudioDevice.h  OSXAudioDevice.cpp  OSXAudioDevice.h  SGIAudioDevice.cpp  SGIAudioDevice.h  SinglePortOSSAudioDevice.cpp  TestAudioDevice.cpp  ThreadedAudioDevice.cpp  ThreadedAudioDevice.h  audio_dev_creator.cpp  audio_devices.cpp  audio_devices.h  audiostream.h  (+2 more)
src/conf/: Config.cpp  Config.h  Makefile  conf.l  conf.ypp  fixlexoutput.sh  yystype.h
src/control/: Makefile
src/maxmsp/: Info.plist  Makefile  rtcmix~.c  rtcmix~.cpp
src/osc/: Makefile  RTOSCListener.cpp  RTOSCListener.h  osc_server_init.sco
src/parser/: Makefile  parse_with_minc.c  parse_with_minc.cpp  parse_with_perl.c  parse_with_python.c  rtcmix_parse.h
src/pd/: .gitignore  LICENSE  Makefile  README.md  rtcmix~-help.pd  rtcmix~.c  rtcmix~.h
src/rtcmix/: .cvsignore  BusSlot.h  DataFile.cpp  DataFile.h  DataSet.cpp  DataSet.h  DynamicLib.h  HOWITWORKS.txt  InputFile.cpp  InputFile.h  Instrument.cpp  Instrument.h  InstrumentBus.cpp  InstrumentBus.h  InstrumentBusManager.cpp  InstrumentBusManager.h  LPCDataSet.cpp  LPCDataSet.h  LPCReader.cpp  Lockable.h  Locked.h  MMPrint.cpp  MMPrint.h  Makefile  Option.cpp  Option.h  PFBusData.cpp  PFBusData.h  PField.cpp  PField.h  PFieldSet.cpp  PFieldSet.h  PvocReader.cpp  RTOption.cpp  RTOption.h  RTSemaphore.h  RTThread.cpp  RTThread.h  RTcmix.cpp  RTcmix.h  (+117 more)
src/sndlib/: Makefile  extra.c  headers.c  io.c  sndlib.h  sndlib.html
test/: full-duplex-test.c  oscillates.c  seltest.c
utils/: Makefile  cmixplay.cpp  cpspchlookup.c  fft.c  fft.h  hist.c  nplay.c  pchcpslookup.c  play  rescale.c  setup_rtcmixrc.cpp  sndpeak.c  sndreverse.c
winincludes/: ieeefp.h
(+1810 files in other folders)
